[package]
name = "blanktrace"
version = "0.1.0"
edition = "2021"
authors = ["The Golden Void Developers"]
description = "BlankTrace: A cross-platform Rust CLI/daemon MITM proxy that anonymizes browser traffic."
license = "MIT"
readme = "README.md"
keywords = ["privacy", "proxy", "mitm", "security", "anonymity", "blanktrace"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/mrorigo/blanktrace"

[[bin]]
name = "blanktrace"
path = "src/main.rs"

[dependencies]
hudsucker = "0.4"
tokio = { version = "1", features = ["full"] }
rcgen = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-util = "0.7"
async-trait = "0.1"
http = "1.0"
rand_agents = "1.0"
hyper = "0.14"
pem = "3.0"

[dev-dependencies]
tempfile = "3.10"
